Add example scripts and pin local example deps
Add PowerShell helper scripts to manage example packages (install, publish, bump versions) under .scripts/. Add a root package.json with workspaces and scripts to run those helpers. Update example package.json files to reference local package paths (file:../../packages/...) instead of workspace:* so examples consume the local packages. Update .gitignore to exclude package-lock.json files in subpackages and clarify node_modules ignores.

--- a/examples/react-native/package.json
+++ b/examples/react-native/package.json
@@ -10,7 +10,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@rootlodge/reality": "workspace:*",
+    "@rootlodge/reality": "file:../../packages/reality",
     "expo": "~50.0.0",
     "expo-status-bar": "~1.11.0",
     "react": "18.2.0",
