--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
 **/node_modules
+# Ignore node_modules in all packages
+**/node_modules
+
+# Ignore package-lock.json files in subpackages (examples, packages)
+**/package-lock.json
