Migrate examples to new Reality API & deps
Update example apps and packages to use the new Reality client/server APIs and adjust polling compatibility code. Replace RealityServer usage with createRealityServer and change fetch handler wiring; update RealityProvider to the new options shape. Refactor new-reality-client to use useRealityClient, the updated createPollingAdapter signature, improved sync/start flow, and safer optimistic mutation handling; also adjust Notification hooks and click handlers. Fix react-chat mutation generics and optimistic update return shape. Bump toolchain and dev deps across examples and packages (vite -> 7.3.1, eslint, @types/bun, updated @typescript-eslint versions, vitest, loosen zod version) to align with the updated APIs and developer tooling.

--- a/examples/react-chat/package.json
+++ b/examples/react-chat/package.json
@@ -12,16 +12,18 @@
   "dependencies": {
     "@rootlodge/reality": "file:../../packages/reality",
     "@rootlodge/reality-server": "file:../../packages/reality-server",
+    "eslint": "9.39.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/bun": "^1.1.0",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
     "@vitejs/plugin-react": "^4.2.1",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3",
-    "vite": "^5.0.10"
+    "vite": "^7.3.1"
   }
 }
