--- a/examples/polling-migration/package.json
+++ b/examples/polling-migration/package.json
@@ -12,14 +12,16 @@
   "dependencies": {
     "@rootlodge/reality": "file:../../packages/reality",
     "@rootlodge/reality-server": "file:../../packages/reality-server",
+    "eslint": "9.39.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/bun": "^1.1.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^4.2.0",
     "typescript": "^5.3.0",
-    "vite": "^5.0.0"
+    "vite": "^7.3.1"
   }
 }
