--- a/examples/sse-migration/package.json
+++ b/examples/sse-migration/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@rootlodge/reality": "file:../../packages/reality",
     "@rootlodge/reality-server": "file:../../packages/reality-server",
+    "eslint": "9.39.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -20,6 +21,6 @@
     "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^4.2.0",
     "typescript": "^5.3.0",
-    "vite": "^5.0.0"
+    "vite": "^7.3.1"
   }
 }
