--- a/packages/reality-server/package.json
+++ b/packages/reality-server/package.json
@@ -77,17 +77,18 @@
     "node": ">=18.0.0"
   },
   "dependencies": {
+    "vite": "7.3.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
-    "@typescript-eslint/eslint-plugin": "^6.15.0",
-    "@typescript-eslint/parser": "^6.15.0",
-    "eslint": "^8.56.0",
+    "@typescript-eslint/eslint-plugin": "^8.54.0",
+    "@typescript-eslint/parser": "^8.54.0",
+    "eslint": "^9.39.2",
     "rimraf": "^5.0.5",
     "tsup": "^8.0.1",
     "typescript": "^5.3.3",
-    "vitest": "^1.1.0"
+    "vitest": "^4.0.18"
   },
   "sideEffects": false
 }
