--- a/packages/reality/package.json
+++ b/packages/reality/package.json
@@ -74,19 +74,20 @@
     }
   },
   "dependencies": {
-    "zod": "^3.23.8"
+    "vite": "7.3.1",
+    "zod": ">=3.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
     "@types/react": "^18.2.45",
-    "@typescript-eslint/eslint-plugin": "^6.15.0",
-    "@typescript-eslint/parser": "^6.15.0",
-    "eslint": "^8.56.0",
+    "@typescript-eslint/eslint-plugin": "^8.54.0",
+    "@typescript-eslint/parser": "^8.54.0",
+    "eslint": "^9.39.2",
     "react": "^18.2.0",
     "rimraf": "^5.0.5",
     "tsup": "^8.0.1",
     "typescript": "^5.3.3",
-    "vitest": "^1.1.0"
+    "vitest": "^4.0.18"
   },
   "sideEffects": false
 }
