Add LLM guide; update examples and exports
Add a comprehensive LLM guide (LLM.md) and modernize multiple examples and package exports:

- Add LLM.md documenting Reality client/server concepts, usage, SSR, adapters, and types.
- examples/drizzle-auto-invalidation.ts: convert to documentation-style example, add types/mocks, rename adapter option to keyExtractor, add serverId, provide integration notes and exports.
- examples/no-database.ts: set serverId, convert to framework integration example (remove built-in start/stop), add exampleInvalidations helper and improved persistence notes.
- examples/react-native: fix imports to use package entry, add stronger typings, fix sync/retry handlers, adjust optimistic mutation typing, update provider usage to options object; update tsconfig.json for bundler resolution and local package path.
- examples/sse-migration: server - remove unused import, add getFetchHandler usage and simpleHash helper; client - import and use useRealityClient and updated RealityEventSource call signature.
- packages/reality-server: bump version to 1.1.0 and add explicit "types" entries for subpath exports in package.json (and lockfile update).
- packages/reality/dist: add createReality alias export (createRealityClient as createReality) in JS and update d.ts/.mts exports accordingly.

These changes are mainly documentation, examples, typings, small API export aliases and packaging metadata to improve developer experience and migration paths.

--- a/packages/reality-server/package.json
+++ b/packages/reality-server/package.json
@@ -1,40 +1,40 @@
 {
   "name": "@rootlodge/reality-server",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Socketless Real-Time Infrastructure - Server components with mesh awareness and storage adapters",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
+      "types": "./dist/index.d.ts",
       "import": "./dist/index.mjs",
-      "require": "./dist/index.js",
-      "types": "./dist/index.d.ts"
+      "require": "./dist/index.js"
     },
     "./storage": {
+      "types": "./dist/storage/index.d.ts",
       "import": "./dist/storage/index.mjs",
-      "require": "./dist/storage/index.js",
-      "types": "./dist/storage/index.d.ts"
+      "require": "./dist/storage/index.js"
     },
     "./http": {
+      "types": "./dist/http/index.d.ts",
       "import": "./dist/http/index.mjs",
-      "require": "./dist/http/index.js",
-      "types": "./dist/http/index.d.ts"
+      "require": "./dist/http/index.js"
     },
     "./mesh": {
+      "types": "./dist/mesh/index.d.ts",
       "import": "./dist/mesh/index.mjs",
-      "require": "./dist/mesh/index.js",
-      "types": "./dist/mesh/index.d.ts"
+      "require": "./dist/mesh/index.js"
     },
     "./redis": {
+      "types": "./dist/redis/index.d.ts",
       "import": "./dist/redis/index.mjs",
-      "require": "./dist/redis/index.js",
-      "types": "./dist/redis/index.d.ts"
+      "require": "./dist/redis/index.js"
     },
     "./compat": {
+      "types": "./dist/compat/index.d.ts",
       "import": "./dist/compat/index.mjs",
-      "require": "./dist/compat/index.js",
-      "types": "./dist/compat/index.d.ts"
+      "require": "./dist/compat/index.js"
     }
   },
   "files": [
