--- a/packages/reality/package.json
+++ b/packages/reality/package.json
@@ -1,25 +1,25 @@
 {
   "name": "@rootlodge/reality",
-  "version": "1.0.0",
+  "version": "1.1.1",
   "description": "Socketless Real-Time Infrastructure - Deterministic pull-based real-time system that replaces WebSockets, SSE, and polling",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
+      "types": "./dist/index.d.ts",
       "import": "./dist/index.mjs",
-      "require": "./dist/index.js",
-      "types": "./dist/index.d.ts"
+      "require": "./dist/index.js"
     },
     "./react": {
+      "types": "./dist/react/index.d.ts",
       "import": "./dist/react/index.mjs",
-      "require": "./dist/react/index.js",
-      "types": "./dist/react/index.d.ts"
+      "require": "./dist/react/index.js"
     },
     "./compat": {
+      "types": "./dist/compat/index.d.ts",
       "import": "./dist/compat/index.mjs",
-      "require": "./dist/compat/index.js",
-      "types": "./dist/compat/index.d.ts"
+      "require": "./dist/compat/index.js"
     }
   },
   "files": [
