Remove bundled React from client build
Remove the inlined React CJS/UMD code and the __commonJS helper from the reality client bundle to externalize React (reduces bundle size and avoids duplicate React copies). Regenerated dist artifacts (JS, MJS, react.* and sourcemaps) and updated packages/reality/package.json. Also includes a small change in src/core/filter.ts.

--- a/packages/reality/package.json
+++ b/packages/reality/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rootlodge/reality",
-  "version": "3.0.0",
+  "version": "3.0.4",
   "description": "Reality 2.0: Event-Set Gossip with Probabilistic Awareness",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
@@ -37,6 +37,9 @@
     "nanoid": "^5.0.4",
     "bloom-filters": "^3.0.1",
     "eventemitter3": "^5.0.1"
+  },
+  "peerDependencies": {
+    "react": "^18.0.0 || ^19.0.0"
   },
   "devDependencies": {
     "tsup": "^8.0.1",
